--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -17,13 +17,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         applicationId "com.alibaba.android.alpha"
         minSdkVersion 14
-        targetSdkVersion 22
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -38,6 +38,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
-//    compile project(':alpha')
-    compile ('com.alibaba.android:alpha:1.0.0.1@aar')
+    compile project(':alpha')
+//    compile ('com.alibaba.android:alpha:1.0.0.1@aar')
 }
