--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -21,7 +21,7 @@ android {
     buildToolsVersion "28.0.3"
 
     defaultConfig {
-        applicationId "com.alibaba.android.alpha"
+        applicationId "com.alibaba.android.alpha.dbt"
         minSdkVersion 14
         targetSdkVersion 28
         versionCode 1
