--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,10 @@ buildscript {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
 }
 
@@ -25,3 +25,20 @@ allprojects {
         }
     }
 }
+
+
+
+ext{
+    POM_ARTIFACTID="tasker"//项目名称id
+    POM_DESCRIPTION='Default DESCRIPTION'
+}
+
+ext{
+    //RELEASE:module_new,TEST:module_test,PRE_VERSION:module_pre
+    POM_GROUPID='com.dbt.common'  //项目组id
+    POM_VERSION= "1.0.1"
+}
+
+
+
+
